k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-system-ingress
  namespace: doc-system
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Managed SSL Certificate (Google tự động cấp và renew)
    networking.gke.io/managed-certificates: "doc-system-cert"
    # Static IP đã reserve
    kubernetes.io/ingress.global-static-ip-name: "doc-system-ip"
    # CHO PHEP HTTP de certificate duoc provision
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: devops.peterphan.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: doc-backend-svc
                port:
                  number: 80
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: doc-backend-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doc-frontend-svc
                port:
                  number: 80
